2007-10-02  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark.
        
        - Efficiently handle regexp property identifiers for 19% speedup on Celtic Kane regexp test
        http://bugs.webkit.org/show_bug.cgi?id=15337

        * kjs/CommonIdentifiers.h:
        * kjs/regexp_object.cpp:
        (RegExpProtoFunc::callAsFunction):
        (RegExpObjectImp::arrayOfMatches):
        (RegExpObjectImp::construct):

2007-10-02  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark.
        
        - Cache global prorotypes more efficiently for 10% speedup on CK AJAX benchmark
        http://bugs.webkit.org/show_bug.cgi?id=15335

        * kjs/lookup.h:

2007-10-01  Oliver Hunt  <oliver@apple.com>

        Reviewed by Mark.

        Enable Experimental SVG features by default when building from Xcode

        * Configurations/JavaScriptCore.xcconfig:

=== Merged changes from rebasing branches/feature-branch on to trunk r25817 ===

2007-09-29  Rob Buis  <buis@kde.org>

        Reviewed by Adam.

        http://bugs.webkit.org/show_bug.cgi?id=13472
        Misparsing date in javascript leads to year value of -1
        http://bugs.webkit.org/show_bug.cgi?id=14176
        Some date values not handled consistently with IE/Firefox

        Allow an optional comma between month and year, and year and time.

        * kjs/date_object.cpp:
        (KJS::parseDate):

2007-07-11  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Mark.

        Forwardport the hash table fix from CodeGeneratorJS.pm to create_hash_table.
        Reran run-jsc-tests, couldn't find any regressions. Suggested by Darin.

        * kjs/create_hash_table:

2007-06-25  Antti Koivisto  <antti@apple.com>

        Reviewed by Maciej.
        
        Use intHash to hash floats and doubles too.

        * ChangeLog:
        * wtf/HashFunctions.h:
        (WTF::FloatHash::hash):
        (WTF::FloatHash::equal):
        (WTF::):
        * wtf/HashTraits.h: